<resources>
    <string name="app_name">Egypt News</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="welcome">Welcome</string>
    <string name="please_enter_email">Please Enter email</string>
    <string name="please_enter_password">Please Enter password</string>
    <string name="remember_me">Remember Me</string>
    <string name="not_registered">Not Register ?</string>
    <string name="register">Register</string>
    <string name="sign_in">Sign In</string>
    <string name="already_registered">Already Registered?</string>
    <string name="sign_up">Sign Up</string>
    <string name="please_enter_your_name">Please Enter Your Name</string>
    <string name="news_title">News Title</string>
    <string name="websiteName">EL Balad</string>
    <string name="publishdate">12/12/2019</string>
    <string name="news_description">news Description</string>
    <string name="go_to_news_in_web_site">GO to News in Web Site</string>
    <string name="publishat">Publish At :</string>
    <string name="publishby">Publish By :</string>
    <string name="enter_key_words_to_search_with">Enter Key Words to Search with</string>
    <string name="website_name">Website Name</string>
    <string name="youm7">El youm7</string>
    <string name="dubaiMunipality">dubai municipality</string>
    <string name="skynews">Sky News</string>
    <string name="almasryalyoum">Elmasry Elyoum</string>
    <string name="enviMinistry">Environmental Ministry</string>
    <string name="open">open</string>
    <string name="close">close</string>
    <string name="googleNews">Google News</string>
    <string name="nabd">Nabd</string>
    <string name="ahram">El Ahram</string>
    <string name="wataninet">Watani</string>
    <string name="dostor">El Dostor</string>
    <string name="masrawy">Masrawy</string>
    <string name="ourenviroment">Our Environment</string>
    <string name="elbalad">Sada Elbalad</string>
    <string name="shorouknews">El Shorouknews</string>
    <string name="no_internet">no Internet</string>
    <string name="publish_website">Publish website</string>
    <string name="publish_date">Publish date</string>
    <string name="exitApp">Do you really want to exit ?</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="invalidemail">Invalid Email Address</string>
    <string name="incorrectemailpass">Incorrect Email or Password</string>
    <string name="headnews">Head News</string>
    <string name="detailsnews">Details News</string>
    <string name="gNews">General News</string>
    <string name="eNews">Environment News</string>
    <string name="errormsg">an Error Occure</string>
    <string name="chooseoflist">Choose from the list</string>
    <string name="home">Home</string>
    <string name="returnr">Return</string>
    <string name="sign_out">Sign Out</string>
    <string name="exit">Exit</string>
    <string name="emptymsg">There ia an Empty Field</string>
    <string name="registsucc">Successfully registered , Please check your email</string>
    <string name="verifyEmail">Please Verify your Email Address</string>
    <string name="resetpass">Reset your Password</string>
    <string name="cancel">Cancel</string>
    <string name="ok">Ok</string>
    <string name="checkemail">Check your Email</string>
    <string name="forgetpass">forget your password ? </string>
    <string name="recover">reset your password</string>
    <string name="emailnotexist">this email not exist</string>
    <string name="emailnotverified">this email not verified yet</string>

</resources>
